[tool.poetry]
name = "discordnpc"
version = "0.1.0"
description = "DiscordNPC lets you interact with ChatGPT through a Discord voice channel, enabling a natural conversation."
authors = ["Parker Wahle <regulad@regulad.xyz>"]
readme = "README.md"
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.11"
dislog = "^2.0.0"
py-cord = {extras = ["speed", "voice"], version = "^2.3.2"}
# Hacky! this must come after dislog, as it has to clobber discord.py's discord module
# py-cord has an API for recieving audio, but discord.py does not
revchatgpt = "^0.2.1"
2captcha-python = ">=1.1.3"  # broken in revchatgpt's requirements
google-speech = "^1.1.0"
pynacl = "^1.5.0"  # doesn't install right with py-cord
websockets = "^10.4"
sox = "^1.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
